# Metal-Flex-Attention

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.py  setup.py  test.txt
flash_attention/: __init__.py  flash_atten_v2.py  flash_attention.py  matmul_kernel.py  scaling_kernel.py  score_mod_kernel.py
flash_attention_mlx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notes/: metal_flash_gemm.txt  metal_flash_matmul.txt  mlx_kernels.md  plan.md
tests/: benchmark.py  matmul_kernel_tests.py  run_tests.py  scaling_kernel_tests.py  score_mod_kernel_tests.py
utils/: kernel_utils.py
