[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash_attention_mlx"
version = "0.1.0"
description = "Flash Attention implementation using the MLX framework"
readme = "README.md"
authors = [
    {name = "Jckwind", email = "jckwind11@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "mlx",
    "torch",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/Jckwind/MLX-FlashAttention"

[tool.setuptools]
packages = ["flash_attention"]
